fixed text-aligned

--- a/GTA Internet/LS Website.css
+++ b/GTA Internet/LS Website.css
@@ -44,7 +44,7 @@ main{
 
 .landing__img{
     width: 100%;
-    min-height: 300px;
+    min-height: 290px;
     position: absolute;
 }
 
@@ -64,21 +64,24 @@ main{
     font-size: 55px;
 }
 
-.text__position2{
-    position: absolute;
-    color: darkorange;
-    top: 46vh;
-    right: 20px;
-    z-index: 1;
-}
-
 .wave{
     content: "";
-    position: absolute;
+    position: relative;
     width: 100%;
     height: 120px;
     transform: translateY(238%);
 }
+
+.text__position2{
+    position: absolute;
+    transform: translateY(350%);
+    color: darkorange;
+    text-align: right;
+    padding: 30px 30px;
+    width: 100%;
+    z-index: 1;
+}
+
 
 /*New section*/
 
